<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_color">


    <LinearLayout
        android:id="@+id/llResetPasswordView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_forgot_password"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/PleaseEnterYourUserNameBelow" />

            <EditText
                android:id="@+id/edtForgotUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="start"
                android:hint="@string/UserName"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textColorHint="@color/LightGray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnForgotSubmit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/edtForgotUserName"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_loginbutton"
                android:text="@string/Submit"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                tools:ignore="ObsoleteLayoutParam" />

        </LinearLayout>

        <!--

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
        -->


    </LinearLayout>


</RelativeLayout>